Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -8,5 +8,5 @@ steps:
   - task: PublishBuildArtifacts@1
     inputs:
       PathtoPublish: '$(Build.SourcesDirectory)'
-      ArtifactName: 'Installers'
+      ArtifactName: 'InstallationArtifacts'
       publishLocation: 'Container'
